bindings/dotnet/src/Turso.Data.Sync/SyncInterop.cs


    [DllImport(DllName, EntryPoint = "turso_connection_prepare_single", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode ConnectionPrepareSingle(
        SyncConnectionHandle connection,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sql,
        out IntPtr statement,
        out IntPtr error);

    [DllImport(DllName, EntryPoint = "turso_statement_finalize", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementFinalize(IntPtr statement, out IntPtr error);

    [DllImport(DllName, EntryPoint = "turso_statement_deinit", CallingConvention = CallingConvention.Cdecl)]
    public static extern void StatementDeinit(IntPtr statement);

    [DllImport(DllName, EntryPoint = "turso_statement_step", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementStep(SyncStatementHandle statement, out IntPtr error);

    [DllImport(DllName, EntryPoint = "turso_statement_run_io", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementRunIo(SyncStatementHandle statement, out IntPtr error);

    [DllImport(DllName, EntryPoint = "turso_statement_n_change", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementRowsAffected(SyncStatementHandle statement);

    [DllImport(DllName, EntryPoint = "turso_statement_column_count", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementColumnCount(SyncStatementHandle statement);

    [DllImport(DllName, EntryPoint = "turso_statement_column_name", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr StatementColumnName(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_row_value_kind", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncValueType StatementRowValueKind(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_row_value_bytes_count", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementRowValueBytesCount(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_row_value_bytes_ptr", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr StatementRowValueBytesPtr(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_row_value_int", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementRowValueInt(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_row_value_double", CallingConvention = CallingConvention.Cdecl)]
    public static extern double StatementRowValueDouble(SyncStatementHandle statement, nuint index);

    [DllImport(DllName, EntryPoint = "turso_statement_named_position", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementNamedPosition(
        SyncStatementHandle statement,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(DllName, EntryPoint = "turso_statement_parameters_count", CallingConvention = CallingConvention.Cdecl)]
    public static extern long StatementParameterCount(SyncStatementHandle statement);

    [DllImport(DllName, EntryPoint = "turso_statement_parameter_name", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr StatementParameterName(SyncStatementHandle statement, long index);

    [DllImport(DllName, EntryPoint = "turso_statement_bind_positional_null", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementBindNull(SyncStatementHandle statement, nuint position);

    [DllImport(DllName, EntryPoint = "turso_statement_bind_positional_int", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementBindInt(SyncStatementHandle statement, nuint position, long value);

    [DllImport(DllName, EntryPoint = "turso_statement_bind_positional_double", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementBindDouble(SyncStatementHandle statement, nuint position, double value);

    [DllImport(DllName, EntryPoint = "turso_statement_bind_positional_text", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementBindText(
        SyncStatementHandle statement,
        nuint position,
        IntPtr value,
        nuint length);

    [DllImport(DllName, EntryPoint = "turso_statement_bind_positional_blob", CallingConvention = CallingConvention.Cdecl)]
    public static extern SyncStatusCode StatementBindBlob(
        SyncStatementHandle statement,
        nuint position,
        IntPtr value,
        nuint length);

    [DllImport(DllName, EntryPoint = "turso_str_deinit", CallingConvention = CallingConvention.Cdecl)]
    public static extern void StringDeinit(IntPtr value);
}
